# ReviANGLE

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.2.md  ini_parser.hpp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
config_editor/: editor_app.cpp  editor_app.hpp  ini_parser.cpp  main.cpp  round_trip_test.cpp  schema.cpp  schema.hpp
docs/: ARCHITECTURE.md  BUILDING.md  CONFIG_REFERENCE.md  INSTALLATION.md
examples_config/: README.md  angle_config.benchmark.ini  angle_config.best-for-low-pc.ini  angle_config.default-safe.ini
release/: angle_config.ini
src/: angle_loader.cpp  angle_loader.hpp  boost_allocator.cpp  boost_allow_tearing.cpp  boost_allow_tearing.hpp  boost_anti_stutter.cpp  boost_asset_loader.cpp  boost_atlas_merge.cpp  boost_audio_compress.cpp  boost_audio_pin.cpp  boost_batch_coalesce.cpp  boost_batch_force.cpp  boost_blend_opt.cpp  boost_d3d11_mt.cpp  boost_depth_off.cpp  boost_dns_prefetch.cpp  boost_drawcall_sort.cpp  boost_drawsort.cpp  boost_dyn_res.cpp  boost_etw_off.cpp  boost_fast_io.cpp  boost_fbo_cache.cpp  boost_fmod.cpp  boost_fmod_channels.cpp  boost_fmod_softmix.cpp  boost_frame_pacing.cpp  boost_frustum_cull.cpp  boost_ftz_daz.cpp  boost_gamemode.cpp  boost_gl_dedup.cpp  boost_gpu_forcer.cpp  boost_halfres_fx.cpp  boost_halfres_render.cpp  boost_heap.cpp  boost_http_pool.cpp  boost_huge_pages.cpp  boost_index_gen.cpp  boost_instancing.cpp  boost_io_priority.cpp  boost_laa.cpp  (+66 more)
src/common/: dxt1_encoder.cpp  dxt1_encoder.hpp  iat_hook.cpp  iat_hook.hpp  pe_utils.cpp  pe_utils.hpp  ring_buffer.hpp
